--- a/exercicios/ex-022/fundo006.html
+++ b/exercicios/ex-022/fundo006.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
             background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat repeat-y;
             background-size: cover;
         }
 main{
@@ -30,6 +30,13 @@ main{
         <h1>Teste de imagens de fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, expedita. Id quis neque earum ipsam odit veritatis nihil tempore officiis obcaecati fugiat explicabo sit quisquam aliquid impedit vitae, sunt recusandae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium iste deleniti adipisci, ducimus, necessitatibus in mollitia consequatur earum iusto et dolorem rem, ullam fuga beatae eligendi a quisquam autem inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet rem deserunt iste porro accusantium tempore nisi nulla hic, facere laudantium, quasi dolore neque molestias perferendis error necessitatibus repellat eaque officiis!
         </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, expedita. Id quis neque earum ipsam odit veritatis nihil tempore officiis obcaecati fugiat explicabo sit quisquam aliquid impedit vitae, sunt recusandae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium iste deleniti adipisci, ducimus, necessitatibus in mollitia consequatur earum iusto et dolorem rem, ullam fuga beatae eligendi a quisquam autem inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet rem deserunt iste porro accusantium tempore nisi nulla hic, facere laudantium, quasi dolore neque molestias perferendis error necessitatibus repellat eaque officiis!
+        </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, expedita. Id quis neque earum ipsam odit veritatis nihil tempore officiis obcaecati fugiat explicabo sit quisquam aliquid impedit vitae, sunt recusandae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium iste deleniti adipisci, ducimus, necessitatibus in mollitia consequatur earum iusto et dolorem rem, ullam fuga beatae eligendi a quisquam autem inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet rem deserunt iste porro accusantium tempore nisi nulla hic, facere laudantium, quasi dolore neque molestias perferendis error necessitatibus repellat eaque officiis!
+        </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, expedita. Id quis neque earum ipsam odit veritatis nihil tempore officiis obcaecati fugiat explicabo sit quisquam aliquid impedit vitae, sunt recusandae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium iste deleniti adipisci, ducimus, necessitatibus in mollitia consequatur earum iusto et dolorem rem, ullam fuga beatae eligendi a quisquam autem inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet rem deserunt iste porro accusantium tempore nisi nulla hic, facere laudantium, quasi dolore neque molestias perferendis error necessitatibus repellat eaque officiis!
+        </p>
+        
     </main>
     
 </body>
