--- a/desafios/d012/d012.html
+++ b/desafios/d012/d012.html
@@ -28,7 +28,7 @@
             Vou dizer tudo em poesia.
             </p>
         </section>
-        <section class="flor">
+        <section class="imagem" id="flor">
             <p>
                 Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -61,7 +61,7 @@
             Decifre esse rabisco.
             </p>
         </section>
-        <section class= "papel">
+        <section class= "imagem" id="papel">
             <p >
                 Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
