--- a/exercicios/ex-023/index.html
+++ b/exercicios/ex-023/index.html
@@ -10,19 +10,17 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
 
         }
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /*alinhamento horizontal*/
+            vertical-align: bottom;/*alinhamento vertical*/
         }
-        tr.linha{
-            background-color: gray;
-        }
-        td.amarelo{
-            background-color: yellow;
-        }
+       
          
     </style>
 </head>
